# esp-idf

./: README.md
components/esp_system/ld/esp32/: sections.ld.in
components/esp_system/ld/esp32c3/: sections.ld.in
components/esp_system/ld/esp32s3/: sections.ld.in
components/gprof/: CMakeLists.txt  READMD_CN.md  debug.c  histogram.c  init.c  io.c  mcount.c  save.c  style.sh
components/gprof/include/: gprof.h
components/gprof/include/gprof/: data.h  debug.h  def.h  histogram.h  io.h  types.h  uio.h
examples/get-started/coremark/: CMakeLists.txt
examples/get-started/coremark/main/: CMakeLists.txt  core_main.c
